Add image overlay feature

--- a/project3.html
+++ b/project3.html
@@ -35,15 +35,15 @@
             <p> To morph two images, we need to select points of correspondences. I used the given tool to select points on the images. After defining the correspondences, I used Delaney Triangulation to triangulate the mean points of Larry David's and Can Ruso's images to find the mean shape. </p>
             <div class="image-grid cols-3">
             <div class="image-container">
-                <img src="proj3images/ruso_tr.png" alt="Ruso points">
+                <a href="proj3images/ruso_tr.png" class="lightbox"><img src="proj3images/ruso_tr.png" alt="Ruso points"></a>
                 <p class="image-subtitle">Ruso points</p>
             </div>
             <div class="image-container">
-                <img src="proj3images/david_tr.png" alt="David points">
+                <a href="proj3images/david_tr.png" class="lightbox"><img src="proj3images/david_tr.png" alt="David points"></a>
                 <p class="image-subtitle">David points</p>
             </div>
             <div class="image-container">
-                <img src="proj3images/mid_tr.png" alt="Mean points on Can Ruso">
+                <a href="proj3images/mid_tr.png" class="lightbox"><img src="proj3images/mid_tr.png" alt="Mean points on Can Ruso"></a>
                 <p class="image-subtitle">Mean points on Can Ruso</p>
             </div>
         </div>
@@ -110,15 +110,15 @@
 </html>
         <div class="image-grid cols-3">
         <div class="image-container">
-            <img src="proj3images/warpedcan.png" alt="Warped Can">
+            <a href="proj3images/warpedcan.png" class="lightbox"><img src="proj3images/warpedcan.png" alt="Warped Can"></a>
             <p class="image-subtitle">Warped Can</p>
         </div>
         <div class="image-container">
-            <img src="proj3images/warpedlarry.png" alt="Warped Larry">
+            <a href="proj3images/warpedlarry.png" class="lightbox"><img src="proj3images/warpedlarry.png" alt="Warped Larry"></a>
             <p class="image-subtitle">Warped Larry</p>
         </div>
         <div class="image-container">
-            <img src="proj3images/averageshape.png" alt="Mid-way Face">
+            <a href="proj3images/averageshape.png" class="lightbox"><img src="proj3images/averageshape.png" alt="Mid-way Face"></a>
             <p class="image-subtitle">Mid-way Face</p>
         </div>
         </div>
@@ -128,7 +128,7 @@
         <div class="clear-float"></div>
         <div class="image-grid cols-1">
         <div class="image-container">
-            <img src="proj3images/larrycan.gif" alt="Larry David to Can Ruso">
+            <a href="proj3images/larrycan.gif" class="lightbox"><img src="proj3images/larrycan.gif" alt="Larry David to Can Ruso"></a>
             <p class="image-subtitle">Larry David to Can Ruso</p>
         </div>
         </div>
@@ -136,7 +136,7 @@
         <p> I also applied the morphing sequence to my father and myself. It turns out we look pretty alike:</p>
         <div class="image-grid cols-1">
         <div class="image-container">
-            <img src="proj3images/morph.gif" alt="My father to Me">
+            <a href="proj3images/morph.gif" class="lightbox"><img src="proj3images/morph.gif" alt="My father to Me"></a>
             <p class="image-subtitle">My father to Me</p>
         </div>
         </div>
@@ -145,33 +145,33 @@
         <div class="clear-float"></div>
         <div class="image-grid cols-2">
         <div class="image-container">
-            <img src="proj3images/morphed2.png" alt="Illustration of morphed2">
+            <a href="proj3images/morphed2.png" class="lightbox"><img src="proj3images/morphed2.png" alt="Illustration of morphed2"></a>
         </div>
         <div class="image-container">
-            <img src="proj3images/morphed3.png" alt="Illustration of morphed3">
+            <a href="proj3images/morphed3.png" class="lightbox"><img src="proj3images/morphed3.png" alt="Illustration of morphed3"></a>
         </div>
         <div class="image-container">
-            <img src="proj3images/morphed4.png" alt="Illustration of morphed4">
+            <a href="proj3images/morphed4.png" class="lightbox"><img src="proj3images/morphed4.png" alt="Illustration of morphed4"></a>
         </div>
         <div class="image-container">
-            <img src="proj3images/morhped6.png" alt="Illustration of morhped6">
+            <a href="proj3images/morhped6.png" class="lightbox"><img src="proj3images/morhped6.png" alt="Illustration of morhped6"></a>
         </div>
         </div>
         <div class="clear-float"></div>
         <p> Here is the mean face of the population:</p>
         <div class="image-grid cols-1">
         <div class="image-container">
-            <img src="proj3images/avgface.jpg" alt="Illustration of avgface">
+            <a href="proj3images/avgface.jpg" class="lightbox"><img src="proj3images/avgface.jpg" alt="Illustration of avgface"></a>
         </div>
         </div>
         <div class="clear-float"></div>
         <p> After computing the mean face of the population, I warped Can's face into the average face, and warped the mean face into Can's face:</p>
         <div class="image-grid cols-2">
         <div class="image-container">
-            <img src="proj3images/warped_avg.png" alt="Illustration of warped avg">
+            <a href="proj3images/warped_avg.png" class="lightbox"><img src="proj3images/warped_avg.png" alt="Illustration of warped avg"></a>
         </div>
         <div class="image-container">
-            <img src="proj3images/warpedcan_avg.png" alt="Illustration of warpedcan avg">
+            <a href="proj3images/warpedcan_avg.png" class="lightbox"><img src="proj3images/warpedcan_avg.png" alt="Illustration of warpedcan avg"></a>
         </div>
         </div>
         <div class="clear-float"></div>
@@ -180,10 +180,10 @@
         <div class="clear-float"></div>
         <div class="image-grid cols-2">
         <div class="image-container">
-            <img src="proj3images/alpha1_7.png" alt="Illustration of alpha1 7">
+            <a href="proj3images/alpha1_7.png" class="lightbox"><img src="proj3images/alpha1_7.png" alt="Illustration of alpha1 7"></a>
         </div>
         <div class="image-container">
-            <img src="proj3images/alpha_0_7.png" alt="Illustration of alpha 0 7">
+            <a href="proj3images/alpha_0_7.png" class="lightbox"><img src="proj3images/alpha_0_7.png" alt="Illustration of alpha 0 7"></a>
         </div>
         </div>
         <div class="clear-float"></div>
@@ -193,19 +193,19 @@
         <p>For the second B&W, I computed the mean face of all the woman images in Danes dataset, and tried to morph only Can's appearance, only Can's shape and both. These are done by having 0 warp frac and 1 dissolve frac, 1 warp frac and 0 dissolve frac, and 0.5 dissolve and warp frac.</p>
         <div class="image-grid cols-2">
         <div class="image-container">
-            <img src="proj3images/womanavg.jpg" alt="Mean Woman Face">
+            <a href="proj3images/womanavg.jpg" class="lightbox"><img src="proj3images/womanavg.jpg" alt="Mean Woman Face"></a>
             <p class="image-subtitle">Mean Woman Face</p>
         </div>
         <div class="image-container">
-            <img src="proj3images/warp_can_w.png" alt="Shape only">
+            <a href="proj3images/warp_can_w.png" class="lightbox"><img src="proj3images/warp_can_w.png" alt="Shape only"></a>
             <p class="image-subtitle">Shape only</p>
         </div>
         <div class="image-container">
-            <img src="proj3images/can_appear.png" alt="Appearance only">
+            <a href="proj3images/can_appear.png" class="lightbox"><img src="proj3images/can_appear.png" alt="Appearance only"></a>
             <p class="image-subtitle">Appearance only</p>
         </div>
         <div class="image-container">
-            <img src="proj3images/can_both.png" alt="Both">
+            <a href="proj3images/can_both.png" class="lightbox"><img src="proj3images/can_both.png" alt="Both"></a>
             <p class="image-subtitle">Both</p>
         </div>
         </div>
@@ -214,5 +214,6 @@
     <footer>
         <a href="index.html" class="footer-link">Back to Home</a>
     </footer>
+    <script src="overlay.js"></script>
 </body>
 </html>
