--- a/project1.html
+++ b/project1.html
@@ -39,76 +39,77 @@
     <h2>Images</h2>
     <div class="image-grid cols-3">
         <div class="image-container">
-            <img src="images/cathedral_output.jpg" alt="cathedral gshift: [5, 2] rshift: [12, 3]">
+            <a href="images/cathedral_output.jpg" class="lightbox"><img src="images/cathedral_output.jpg" alt="cathedral gshift: [5, 2] rshift: [12, 3]"></a>
             <p class="image-description"><i>cathedral.jpg</i> gshift: [5, 2] rshift: [12, 3]</p>
         </div>
         <div class="image-container">
-            <img src="images/monastery_output.jpg" alt="monastery gshift: [-3, 2] rshift: [3, 2]">
+            <a href="images/monastery_output.jpg" class="lightbox"><img src="images/monastery_output.jpg" alt="monastery gshift: [-3, 2] rshift: [3, 2]"></a>
             <p class="image-description"><i>monastery.jpg</i> gshift: [-3, 2] rshift: [3, 2]</p>
         </div>
         <div class="image-container">
-            <img src="images/tobolsk_output.jpg" alt="tobolsk gshift: [3, 2] rshift: [6, 3]">
+            <a href="images/tobolsk_output.jpg" class="lightbox"><img src="images/tobolsk_output.jpg" alt="tobolsk gshift: [3, 2] rshift: [6, 3]"></a>
             <p class="image-description"><i>tobolsk.jpg</i> gshift: [3, 2] rshift: [6, 3]</p>
         </div>
         <div class="image-container">
-            <img src="images/icon_output.jpg" alt="icon gshift: [40, 16] rshift: [90, 22]">
+            <a href="images/icon_output.jpg" class="lightbox"><img src="images/icon_output.jpg" alt="icon gshift: [40, 16] rshift: [90, 22]"></a>
             <p class="image-description"><i>icon.jpg</i> gshift: [40, 16] rshift: [90, 22]</p>
         </div>
         <div class="image-container">
-            <img src="images/harvesters_output.jpg" alt="harvesters gshift: [59, 15] rshift: [124, 12]">
+            <a href="images/harvesters_output.jpg" class="lightbox"><img src="images/harvesters_output.jpg" alt="harvesters gshift: [59, 15] rshift: [124, 12]"></a>
             <p class="image-description"><i>harvesters.jpg</i> gshift: [59, 15] rshift: [124, 12]</p>
         </div>
         <div class="image-container">
-            <img src="images/emir_output.jpg" alt="emir gshift: [49, 22] rshift: [106, 40]">
+            <a href="images/emir_output.jpg" class="lightbox"><img src="images/emir_output.jpg" alt="emir gshift: [49, 22] rshift: [106, 40]"></a>
             <p class="image-description"><i>emir.jpg</i> gshift: [49, 22] rshift: [106, 40]</p>
         </div>
         <div class="image-container">
-            <img src="images/church_output.jpg" alt="church gshift: [24, -6] rshift: [55, -7]">
+            <a href="images/church_output.jpg" class="lightbox"><img src="images/church_output.jpg" alt="church gshift: [24, -6] rshift: [55, -7]"></a>
             <p class="image-description"><i>church.jpg</i> gshift: [24, -6] rshift: [55, -7]</p>
         </div>
         <div class="image-container">
-            <img src="images/lady_output.jpg" alt="lady gshift: [56, 6] rshift: [115, 11]">
+            <a href="images/lady_output.jpg" class="lightbox"><img src="images/lady_output.jpg" alt="lady gshift: [56, 6] rshift: [115, 11]"></a>
             <p class="image-description"><i>lady.jpg</i> gshift: [56, 6] rshift: [115, 11]</p>
         </div>
         <div class="image-container">
-            <img src="images/melons_output.jpg" alt="melons gshift: [81, 9] rshift: [178, 12]">
+            <a href="images/melons_output.jpg" class="lightbox"><img src="images/melons_output.jpg" alt="melons gshift: [81, 9] rshift: [178, 12]"></a>
             <p class="image-description"><i>melons.jpg</i> gshift: [81, 9] rshift: [178, 12]</p>
         </div>
         <div class="image-container">
-            <img src="images/onion_church_output.jpg" alt="onion_church gshift: [52, 24] rshift: [108, 35]">
+            <a href="images/onion_church_output.jpg" class="lightbox"><img src="images/onion_church_output.jpg" alt="onion_church gshift: [52, 24] rshift: [108, 35]"></a>
             <p class="image-description"><i>onion_church.jpg</i> gshift: [52, 24] rshift: [108, 35]</p>
         </div>
         <div class="image-container">
-            <img src="images/sculpture_output.jpg" alt="sculpture gshift: [33, -12] rshift: [140, -27]">
+            <a href="images/sculpture_output.jpg" class="lightbox"><img src="images/sculpture_output.jpg" alt="sculpture gshift: [33, -12] rshift: [140, -27]"></a>
             <p class="image-description"><i>sculpture.jpg</i> gshift: [33, -12] rshift: [140, -27]</p>
         </div>
         <div class="image-container">
-            <img src="images/self_portrait_output.jpg" alt="self_portrait gshift: [78, 28] rshift: [176, 36]">
+            <a href="images/self_portrait_output.jpg" class="lightbox"><img src="images/self_portrait_output.jpg" alt="self_portrait gshift: [78, 28] rshift: [176, 36]"></a>
             <p class="image-description"><i>self_portrait.jpg</i> gshift: [78, 28] rshift: [176, 36]</p>
         </div>
         <div class="image-container">
-            <img src="images/three_generations_output.jpg" alt="three_generations gshift: [53, 14] rshift: [112, 10]">
+            <a href="images/three_generations_output.jpg" class="lightbox"><img src="images/three_generations_output.jpg" alt="three_generations gshift: [53, 14] rshift: [112, 10]"></a>
             <p class="image-description"><i>three_generations.jpg</i> gshift: [53, 14] rshift: [112, 10]</p>
         </div>
         <div class="image-container">
-            <img src="images/train_output.jpg" alt="train gshift: [42, 0] rshift: [86, 30]">
+            <a href="images/train_output.jpg" class="lightbox"><img src="images/train_output.jpg" alt="train gshift: [42, 0] rshift: [86, 30]"></a>
             <p class="image-description"><i>train.jpg</i> gshift: [42, 0] rshift: [86, 30]</p>
         </div>
         <div class="image-container">
-            <img src="images/religious_portrait.jpg" alt="religious_portrait (my choosing from collection) gshift: [29, 4] rshift: [69, 6]">
+            <a href="images/religious_portrait.jpg" class="lightbox"><img src="images/religious_portrait.jpg" alt="religious_portrait (my choosing from collection) gshift: [29, 4] rshift: [69, 6]"></a>
             <p class="image-description"><i>religious_portrait.jpg</i> (my choosing from collection) gshift: [29, 4] rshift: [69, 6]</p>
         </div>
         <div class="image-container">
-            <img src="images/landscape.jpg" alt="landscape (my choosing from collection) gshift: [14, 26] rshift: [84, 50]">
+            <a href="images/landscape.jpg" class="lightbox"><img src="images/landscape.jpg" alt="landscape (my choosing from collection) gshift: [14, 26] rshift: [84, 50]"></a>
             <p class="image-description"><i>landscape.jpg</i> (my choosing from collection) gshift: [14, 26] rshift: [84, 50]</p>
         </div>
         <div class="image-container">
-            <img src="images/napoleon.jpg" alt="napoleon (my choosing from collection) gshift: [64, 4] rshift: [132, -2]">
+            <a href="images/napoleon.jpg" class="lightbox"><img src="images/napoleon.jpg" alt="napoleon (my choosing from collection) gshift: [64, 4] rshift: [132, -2]"></a>
             <p class="image-description"><i>napoleon.jpg</i> (my choosing from collection) gshift: [64, 4] rshift: [132, -2]</p>
         </div>
     </div>
     <footer>
         <a href="index.html" class="footer-link">Back to Home</a>
     </footer>
+    <script src="overlay.js"></script>
 </body>
 </html>
