--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <a href="project4.html">Project 4</a>
     <a href="project5.html">Project 5</a>
     <a href="project6.html">Project 6</a>
+    <button id="dark-mode-toggle" class="toggle-button" type="button">Toggle Dark Mode</button>
 </nav>
     <h1>Welcome to My Portfolio!</h1>
     <div class="projects">
@@ -25,5 +26,6 @@
         <a href="project5.html" class="project-link">Project 5: Fun With Diffusion Models!</a>
         <a href="project6.html" class="project-link">Final Project: Neural Radiance Field!</a>
     </div>
+    <script src="dark-mode.js"></script>
 </body>
 </html>
