--- a/project2.html
+++ b/project2.html
@@ -15,6 +15,7 @@
     <a href="project4.html">Project 4</a>
     <a href="project5.html">Project 5</a>
     <a href="project6.html">Project 6</a>
+    <button id="dark-mode-toggle" class="toggle-button" type="button">Toggle Dark Mode</button>
 </nav>
     <h1>Project 2: Fun with Filters and Frequencies!</h1>
     <h2>Alp Eren Ozdarendeli</h2>
@@ -435,5 +436,6 @@
     <footer>
         <a href="index.html" class="footer-link">Back to Home</a>
     </footer>
+    <script src="dark-mode.js"></script>
 </body>
 </html>
