--- a/project6.html
+++ b/project6.html
@@ -20,6 +20,7 @@
     <a href="project4.html">Project 4</a>
     <a href="project5.html">Project 5</a>
     <a href="project6.html" class="active">Project 6</a>
+    <button id="dark-mode-toggle" class="toggle-button" type="button">Toggle Dark Mode</button>
 </nav>
     <h1>Final Project: NeRF</h1>
     <h2>Alp Eren Ozdarendeli</h2>    
@@ -250,5 +251,6 @@
     <footer>
         <a href="index.html" class="footer-link">Back to Home</a>
     </footer>
+    <script src="dark-mode.js"></script>
 </body>
 </html>
