Add project cards

--- a/index.html
+++ b/index.html
@@ -18,12 +18,48 @@
 </nav>
     <h1>Welcome to My Portfolio!</h1>
     <div class="projects">
-        <a href="project1.html" class="project-link">Project 1: Colorizing the Prokudin-Gorskii Photo Collection</a>
-        <a href="project2.html" class="project-link">Project 2: Fun with Filters and Frequencies!</a>
-        <a href="project3.html" class="project-link">Project 3: Face Morphing</a>
-        <a href="project4.html" class="project-link">Project 4: Image Warping and Mosaicing</a>
-        <a href="project5.html" class="project-link">Project 5: Fun With Diffusion Models!</a>
-        <a href="project6.html" class="project-link">Final Project: Neural Radiance Field!</a>
+        <div class="project-card">
+            <a href="project1.html" class="project-link">
+                <img src="br1.png" alt="Project 1 icon">
+                <h3>Project 1</h3>
+                <p>Aligns RGB channels to reconstruct historical color photos.</p>
+            </a>
+        </div>
+        <div class="project-card">
+            <a href="project2.html" class="project-link">
+                <img src="br2.png" alt="Project 2 icon">
+                <h3>Project 2</h3>
+                <p>Explore filters and frequency domain techniques for images.</p>
+            </a>
+        </div>
+        <div class="project-card">
+            <a href="project3.html" class="project-link">
+                <img src="br3.png" alt="Project 3 icon">
+                <h3>Project 3</h3>
+                <p>Create smooth transitions between faces with morphing.</p>
+            </a>
+        </div>
+        <div class="project-card">
+            <a href="project4.html" class="project-link">
+                <img src="br4.png" alt="Project 4 icon">
+                <h3>Project 4</h3>
+                <p>Warp and mosaic images to build panoramas.</p>
+            </a>
+        </div>
+        <div class="project-card">
+            <a href="project5.html" class="project-link">
+                <img src="br5.png" alt="Project 5 icon">
+                <h3>Project 5</h3>
+                <p>Experiment with diffusion models for image generation.</p>
+            </a>
+        </div>
+        <div class="project-card">
+            <a href="project6.html" class="project-link">
+                <img src="br6.png" alt="Project 6 icon">
+                <h3>Final Project</h3>
+                <p>Implement a neural radiance field for novel views.</p>
+            </a>
+        </div>
     </div>
 </body>
 </html>
