Add footer with contact info

--- a/project4.html
+++ b/project4.html
@@ -295,6 +295,10 @@
     <footer>
         <a href="#top" class="back-to-top">Back to top</a>
         <a href="index.html" class="footer-link">Back to Home</a>
+        <div class="contact-info">
+            <a href="mailto:alpozdarendeli@berkeley.edu">alpozdarendeli@berkeley.edu</a> |
+            <a href="https://github.com/alpozdarendeli">GitHub</a>
+        </div>
     </footer>
     <script src="script.js"></script>
 </body>
