--- a/project3.html
+++ b/project3.html
@@ -14,6 +14,8 @@
 </head>
 <body id="top">
 <nav class="navbar">
+    <button class="menu-toggle" aria-label="Toggle navigation">&#9776;</button>
+    <div class="navbar-links">
     <a href="index.html">Home</a>
     <a href="project1.html">Project 1</a>
     <a href="project2.html">Project 2</a>
@@ -21,6 +23,7 @@
     <a href="project4.html">Project 4</a>
     <a href="project5.html">Project 5</a>
     <a href="project6.html">Project 6</a>
+    </div>
 </nav>
     <h1>Project 3: Face Morphing</h1>
     <h2>Alp Eren Ozdarendeli</h2>
