--- a/project4.html
+++ b/project4.html
@@ -13,6 +13,8 @@
 </head>
 <body id="top">
 <nav class="navbar">
+    <button class="menu-toggle" aria-label="Toggle navigation">&#9776;</button>
+    <div class="navbar-links">
     <a href="index.html">Home</a>
     <a href="project1.html">Project 1</a>
     <a href="project2.html">Project 2</a>
@@ -20,6 +22,7 @@
     <a href="project4.html" class="active">Project 4</a>
     <a href="project5.html">Project 5</a>
     <a href="project6.html">Project 6</a>
+    </div>
 </nav>
     <h1>Project 4: Image Warping and Mosaicing</h1>
     <h2>Alp Eren Ozdarendeli</h2>
