--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body id="top">
 <nav class="navbar">
     <button class="menu-toggle" aria-label="Toggle navigation">&#9776;</button>
     <div class="navbar-links">
@@ -19,8 +19,13 @@
     <a href="project6.html">Project 6</a>
     </div>
 </nav>
+<header class="hero">
     <h1>Welcome to My Portfolio!</h1>
-    <div class="projects">
+    <p>Projects in computer vision, graphics, and machine learning.</p>
+    <a href="#projects" class="cta-button">Explore My Work</a>
+</header>
+    
+<div id="projects" class="projects">
         <div class="project-card">
             <a href="project1.html" class="project-link">
                 <img src="br1.png" alt="Project 1 icon">
