Refine design with new fonts and colors

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Alp Eren Ozdarendeli | Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body id="top">
@@ -20,8 +20,8 @@
     </div>
 </nav>
 <header class="hero">
-    <h1>Welcome to My Portfolio!</h1>
-    <p>Projects in computer vision, graphics, and machine learning.</p>
+    <h1>Alp Eren Ozdarendeli</h1>
+    <p>Thoughtful explorations in computer vision and graphics.</p>
     <a href="#projects" class="cta-button">Explore My Work</a>
 </header>
     
